2006-01-24  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.

	* HISTORY, META, NEWS, PLATFORMS: Updated for 0.5 release.

	* README: Updated.

	* munge.spec: Updated %files to include new documentation.

	* README.MULTILIB: Added.

	* QUICKSTART: Added.

2006-01-23  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Moved libmunge.so from libs back to devel subpackage.

	* src/munged/auth_recv.c: Updated for new munge message layer.
	* src/libmunge/auth_send.c: Updated for new munge message layer.

2006-01-19  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Moved libmunge.so from devel to libs subpackage.

	* src/libcommon/munge_defs.h:
	  Appended interface version number to MUNGE_SOCKET_NAME.

	* src/libcommon/license.c: Updated copyright date range.

	* src/libcommon/m_msg.c(_msg_unpack):
	  Added cast to discard const qualifier from ptr type.
	* src/munged/zip.c(zip_decompress_length):
	  Added cast to discard const qualifier from ptr type.

	* HISTORY, META, NEWS: Updated for 0.5 release.

2006-01-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c(_gids_hash_create):
	  Ensured endgrent() is called on error.

2006-01-17  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c(_alloc):
	  Added NUL-termination byte to end of memory allocation.
	* src/libmunge/encode.c(_encode_rsp):
	  Removed unnecessary dup of rsp data.
	* src/libmunge/decode.c(_decode_rsp):
	  Removed unnecessary dup of rsp data & realm_str.

	* src/munged/enc.c(enc_fini):
	  Free()d req data before overwriting data ptr with rsp data.

2006-01-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c(m_msg_send):
	  Added check for pkt_is_copy before free()ing pkt.
	* src/libcommon/m_msg.c(m_msg_send):
	  Added check for negative length returned from _msg_length().
	* src/libcommon/m_msg.c: Tweaked function documentation.

	* src/munged/dec.c(dec_unarmor):
	  Free()d data after unarmoring to prevent leak in dec_unpack_inner().
	* src/munged/dec.c(dec_unpack_outer):